# CPP17_STL_COOKBOOK

./: .gitignore  CMakeLists.txt
Chapter1/: 使用constexpr-if简化编译.cpp  使用折叠表达式实现辅助函数.cpp  使用结构化绑定来解包绑定的返回值.cpp  可变参数模板.cpp  新的括号初始化规则.cpp  结构体构造函数.cpp  讲变量作用于限制于if和switch区域内.cpp
Chapter1/header/: aux_5.h
Chapter10/: files.h  列出目录下所有的文件.cpp  实现标准化路径.cpp  相对路径获取规范的文件路径.cpp
Chapter2/: mapSTLOP.cpp  mapSTL操作.cpp  mapSTL操作.h  priority_queue.cpp  priority_queue.h  setSTL操作.cpp  setSTL操作.h  vectorSTL操作.cpp  vectorSTL操作.h  词频计数器.cpp  词频计数器.h  逆波兰计算器.cpp  逆波兰计算器.h
Chapter3/: 反向迭代器.cpp  反向迭代器.h  哨兵模式.cpp  哨兵模式.h  实现一个简单的迭代器.cpp  实现一个简单的迭代器.h  迭代器算法.cpp  迭代器算法.h  迭代适配器.cpp
Chapter4/: lambda函数.cpp  使用lambda为function添加多态性.cpp  使用lambda为function添加多态性.h  同一输入调用多个函数.cpp  并置函数.cpp  通过逻辑连接创建复杂谓词.cpp  通过逻辑连接创建复杂谓词.h
Chapter4/补充知识/: function_func_wrapper.cpp  function_func_wrapper.h
Chapter5/: 从容器中删除指定元素.cpp  合并容器.cpp  在vector中的值控制在特定范围内.cpp  在vector中的值控制在特定范围内.h  在有序和无序的vector中查找元素.cpp  在有序和无序的vector中查找元素.h  字符串中的定位方法.cpp  容器元素的排序.cpp  容器间的互相拷贝.cpp  容器间的互相拷贝.h  对大vector采样.cpp  改变容器内容.cpp
Chapter5/补充知识/: stringstream的使用.cpp
Chapter6/: 使用STL算法实现简单单词查找树.cpp  使用STL算法实现简单单词查找树.h
Chapter7/: 从用户输入读取数值.cpp  从错误中获取可读异常.cpp  创建and连接and转换字符串.cpp  文件初始化复杂对象.cpp  无需构造string.cpp  消除字符串开头和结尾的空格.cpp  计算文件中的单词数量.cpp  输出数据到文件.cpp  迭代器打印.cpp  迭代器装填容器.cpp
Chapter8/: any的替换void*.cpp  optional_head.h  random_number_generator.h  元组快速构成数据结构.cpp  元组快速构成数据结构.h  共享同一对象的不同成员.cpp  共享同一对象的不同成员.h  处理共享堆内存.cpp  处理共享堆内存.h  存储不同类型.cpp  存储不同类型.h  安全的失败标识--optional.cpp  对元组使用函数.cpp  对元组使用函数.h  对共享对象使用弱指针.cpp  对共享对象使用弱指针.h  智能指针简化处理遗留API问题.cpp  智能指针简化处理遗留API问题.h  自动化规划资源管理.h  自动规划资源管理.cpp  让STL以指定的分布方式产生随机数.cpp  转换不同的时间单位.cpp  转换绝对时间和相对时间.cpp  选择合适的引擎生成随机数.cpp
